--- a/css/main.css
+++ b/css/main.css
@@ -601,6 +601,75 @@
     bottom: 23% !important;
   }
 }
+@media (min-width: 320px) and (max-width: 575.98px) {
+  .play_wrapper_col1 {
+    padding: 20px 20px 29px 20px !important;
+    -ms-flex-wrap: wrap !important;
+        flex-wrap: wrap !important;
+    -webkit-box-pack: center !important;
+        -ms-flex-pack: center !important;
+            justify-content: center !important;
+  }
+  .play_wrapper_col1 .play_wrapper_col1_item_title {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: start;
+    font-size: 24px !important;
+    line-height: 29px !important;
+  }
+  .play_wrapper_col1 .play_wrapper_col1_item2_text {
+    font-size: 19px !important;
+    line-height: 23px !important;
+  }
+  .play_wrapper_col1 .play_wrapper_col1_item {
+    width: 100%;
+  }
+  .play_wrapper_col1 .play_wrapper_col1_item img {
+    width: 100%;
+  }
+  .play_wrapper_col2_item1 {
+    max-height: -webkit-fit-content !important;
+    max-height: -moz-fit-content !important;
+    max-height: fit-content !important;
+    width: 100%;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 20px 20px 50px 20px !important;
+  }
+  .play_wrapper_col2_item1 .play_wrapper_col1_item_title {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-size: 30px !important;
+    line-height: 36px !important;
+  }
+  .play_wrapper_col2_item2 {
+    max-height: -webkit-fit-content !important;
+    max-height: -moz-fit-content !important;
+    max-height: fit-content !important;
+    width: 100%;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 20px 20px 50px 20px !important;
+  }
+  .play_wrapper_col2_item2 .play_wrapper_col1_item_title {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-size: 30px !important;
+    line-height: 36px !important;
+  }
+  .play_wrapper_col2_item2_info_text {
+    text-align: center;
+  }
+}
 @media (min-width: 576px) and (max-width: 767.98px) {
   .play_wrapper_col1 {
     padding: 20px 20px 29px 20px !important;
