--- a/css/_media.scss
+++ b/css/_media.scss
@@ -577,6 +577,13 @@ body {
 }
 
 @media (min-width: 320px) and (max-width: 575.98px) {
+    .preloader{
+        .logo_wrapper{
+            .logo_title{
+                font-size: 25px !important;
+            }
+        }
+    }
     .play_wrapper_col1 {
         padding: 20px 20px 29px 20px !important;
         .play_wrapper_col1_item_title {
