--- a/css/main.scss
+++ b/css/main.scss
@@ -189,7 +189,8 @@ header {
 }
 nav {
    display: flex;
-   justify-content: space-between;
+   justify-content: center;
+   flex-wrap: wrap;
 }
 .logo_title {
    font-weight: 800;
@@ -298,6 +299,7 @@ nav {
    display: flex;
    gap: 15px;
    cursor: pointer;
+   margin-right: 177px;
 }
 .mobile_btns {
    display: none;
