--- a/css/_media.scss
+++ b/css/_media.scss
@@ -665,6 +665,15 @@ body {
    .play_wrapper_col2_item2_info_text {
       text-align: center;
    }
+   .services_cards{
+    padding: 0 15px !important;
+    .services_cards_item {
+        width: 100% !important;
+        &:hover{
+            transform: scale(1.00) !important;
+        }
+    }
+   }
 }
 @media (min-width: 576px) and (max-width: 767.98px) {
    .play_wrapper_col1 {
