--- a/css/_media.scss
+++ b/css/_media.scss
@@ -40,7 +40,6 @@ body {
       gap: 150px !important;
    }
    .header_wrapper {
-      max-width: 726px !important;
       margin: 0 auto 93px;
       nav {
          justify-content: space-between !important;
@@ -142,7 +141,7 @@ body {
       padding: 0 !important;
    }
    .header_wrapper {
-      max-width: 726px !important;
+
       margin: 0 auto 93px;
       nav {
          justify-content: space-between !important;
@@ -206,16 +205,28 @@ body {
       padding: 0 5px;
    }
 }
+@media (min-width: 1736px){
+    .header_wrapper{
+        position: static !important;
+    }
+}
+@media (min-width: 1090px) and (max-width: 1299.98px){
+    .header_info_container {
+        margin-top: 215px !important;
+    }
+
+}
 @media (min-width: 1400px) and (max-width: 1735.98px){
     nav{
         .logo_wrapper{
+            width: 100%;
+            justify-content: center;
             margin-right: 0 !important;
           }
     }
 }
 @media (min-width: 576px) and (max-width: 767.98px) {
-   .header_wrapper {
-      max-width: 726px !important;
+   .header_wrapper {  
       margin: 0 auto 93px;
       .logo_wrapper{
         margin-right: 0 !important;
@@ -241,7 +252,7 @@ body {
 
 @media (min-width: 768px) and (max-width: 991.98px) {
    .header_wrapper {
-      max-width: 726px !important;
+
       margin: 0 auto 93px;
       nav {
          justify-content: space-between !important;
@@ -490,120 +501,120 @@ body {
 }
 
 // 3_section
-@media (min-height: 250px) and (max-height: 299.98px) {
-   .load_cat {
-      top: 28% !important;
-   }
+// @media (min-height: 250px) and (max-height: 299.98px) {
+//    .load_cat {
+//       top: 28% !important;
+//    }
 
-   .load_1 {
-      top: 16% !important;
-      animation: preloader-rotate 10s linear infinite alternate;
-   }
-   .load_2 {
-      top: 9% !important;
-   }
-   .load_3 {
-      top: 3.3% !important;
-   }
-   .logo_wrapper {
-      bottom: 0% !important;
-   }
-}
-@media (min-height: 300px) and (max-height: 399.98px) {
-   .load_cat {
-      top: 32% !important;
-   }
+//    .load_1 {
+//       top: 16% !important;
+//       animation: preloader-rotate 10s linear infinite alternate;
+//    }
+//    .load_2 {
+//       top: 9% !important;
+//    }
+//    .load_3 {
+//       top: 3.3% !important;
+//    }
+//    .logo_wrapper {
+//       bottom: 0% !important;
+//    }
+// }
+// @media (min-height: 300px) and (max-height: 399.98px) {
+//    .load_cat {
+//       top: 32% !important;
+//    }
 
-   .load_1 {
-      top: 19% !important;
-      animation: preloader-rotate 10s linear infinite alternate;
-   }
-   .load_2 {
-      top: 13% !important;
-   }
-   .load_3 {
-      top: 7.3% !important;
-   }
-   .logo_wrapper {
-      bottom: 0% !important;
-   }
-}
-@media (min-height: 400px) and (max-height: 499.98px) {
-   .load_cat {
-      top: 34% !important;
-   }
+//    .load_1 {
+//       top: 19% !important;
+//       animation: preloader-rotate 10s linear infinite alternate;
+//    }
+//    .load_2 {
+//       top: 13% !important;
+//    }
+//    .load_3 {
+//       top: 7.3% !important;
+//    }
+//    .logo_wrapper {
+//       bottom: 0% !important;
+//    }
+// }
+// @media (min-height: 400px) and (max-height: 499.98px) {
+//    .load_cat {
+//       top: 34% !important;
+//    }
 
-   .load_1 {
-      top: 26% !important;
-      animation: preloader-rotate 10s linear infinite alternate;
-   }
-   .load_2 {
-      top: 20% !important;
-   }
-   .load_3 {
-      top: 15.3% !important;
-   }
-   .logo_wrapper {
-      bottom: 10% !important;
-   }
-}
-@media (min-height: 500px) and (max-height: 599.98px) {
-   .load_cat {
-      top: 44% !important;
-   }
+//    .load_1 {
+//       top: 26% !important;
+//       animation: preloader-rotate 10s linear infinite alternate;
+//    }
+//    .load_2 {
+//       top: 20% !important;
+//    }
+//    .load_3 {
+//       top: 15.3% !important;
+//    }
+//    .logo_wrapper {
+//       bottom: 10% !important;
+//    }
+// }
+// @media (min-height: 500px) and (max-height: 599.98px) {
+//    .load_cat {
+//       top: 44% !important;
+//    }
 
-   .load_1 {
-      top: 37.4% !important;
-      animation: preloader-rotate 10s linear infinite alternate;
-   }
-   .load_2 {
-      top: 32.8% !important;
-   }
-   .load_3 {
-      top: 29.3% !important;
-   }
-   .logo_wrapper {
-      bottom: 10% !important;
-   }
-}
-@media (min-height: 600px) and (max-height: 699.98px) {
-   .load_cat {
-      top: 38% !important;
-   }
+//    .load_1 {
+//       top: 37.4% !important;
+//       animation: preloader-rotate 10s linear infinite alternate;
+//    }
+//    .load_2 {
+//       top: 32.8% !important;
+//    }
+//    .load_3 {
+//       top: 29.3% !important;
+//    }
+//    .logo_wrapper {
+//       bottom: 10% !important;
+//    }
+// }
+// @media (min-height: 600px) and (max-height: 699.98px) {
+//    .load_cat {
+//       top: 38% !important;
+//    }
 
-   .load_1 {
-      top: 34.4% !important;
-      animation: preloader-rotate 10s linear infinite alternate;
-   }
-   .load_2 {
-      top: 31.7% !important;
-   }
-   .load_3 {
-      top: 29.3% !important;
-   }
-   .logo_wrapper {
-      bottom: 23% !important;
-   }
-}
-@media (min-height: 700px) and (max-height: 799.98px) {
-   .load_cat {
-      top: 38% !important;
-   }
+//    .load_1 {
+//       top: 34.4% !important;
+//       animation: preloader-rotate 10s linear infinite alternate;
+//    }
+//    .load_2 {
+//       top: 31.7% !important;
+//    }
+//    .load_3 {
+//       top: 29.3% !important;
+//    }
+//    .logo_wrapper {
+//       bottom: 23% !important;
+//    }
+// }
+// @media (min-height: 700px) and (max-height: 799.98px) {
+//    .load_cat {
+//       top: 38% !important;
+//    }
 
-   .load_1 {
-      top: 34.4% !important;
-      animation: preloader-rotate 10s linear infinite alternate;
-   }
-   .load_2 {
-      top: 31.7% !important;
-   }
-   .load_3 {
-      top: 29.3% !important;
-   }
-   .logo_wrapper {
-      bottom: 23% !important;
-   }
-}
+//    .load_1 {
+//       top: 34.4% !important;
+//       animation: preloader-rotate 10s linear infinite alternate;
+//    }
+//    .load_2 {
+//       top: 31.7% !important;
+//    }
+//    .load_3 {
+//       top: 29.3% !important;
+//    }
+//    .logo_wrapper {
+//       bottom: 23% !important;
+//    }
+// }
 
 @media (min-width: 320px) and (max-width: 575.98px) {
    .preloader {
@@ -787,24 +798,136 @@ body {
 // Intro
 
 @media (min-width: 320px) and (max-width: 575.98px) {
+    .trend{
+        padding: 120px 15px 100px !important;
+        text-align: -webkit-center;
+    }
+    .section_subtitle{
+        padding: 0 16px !important;
+    }
+    .play_wrapper_col3 {
+        gap: 100px !important;
+        flex-wrap: wrap;
+     }
+     .play_wrapper_col3_item2_subitem_text {
+        font-size: 24px !important;
+     }
+     .play_wrapper_col3_item2_subitem_title {
+        font-size: 26px !important;
+     }
+     .play_wrapper_col3_item1_title{
+        font-size: 28px !important;
+        line-height: 35px !important;
+     }
+     .play_wrapper_col3_item2_subitem{
+        flex-direction: column;
+        text-align: center;
+     }
+     .play_wrapper_col3_item1{
+        width: 100%;
+        .play_wrapper_col3_item1_title,.play_wrapper_col3_item1_subtitle{
+            width: 100%;
+            max-width: 100%;
+        }
+        .play_wrapper_col3_item2{
+            max-width: 100% !important;
+            width: 100%;
+        }
+     }
+     .logo_wrapper{
+        margin-right: 0 !important;
+     }
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
+    .logo_wrapper{
+        margin-right: 0 !important;
+     }
+    .play_wrapper_col3 {
+        gap: 100px !important;
+        flex-wrap: wrap;
+     }
+     .play_wrapper_col3_item2_subitem_text {
+        font-size: 24px !important;
+     }
+     .play_wrapper_col3_item2_subitem_title {
+        font-size: 26px !important;
+     }
+     .play_wrapper_col3_item2_subitem{
+        flex-direction: column;
+        text-align: center;
+     }
+     .play_wrapper_col3_item1{
+        width: 100%;
+        .play_wrapper_col3_item1_title,.play_wrapper_col3_item1_subtitle{
+            width: 100%;
+            max-width: 100%;
+        }
+        .play_wrapper_col3_item2{
+            max-width: 100% !important;
+            width: 100%;
+        }
+     }
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
+    .play_wrapper_col3 {
+        gap: 100px !important;
+        flex-wrap: wrap;
+     }
+     .play_wrapper_col3_item1{
+        width: 100%;
+        .play_wrapper_col3_item1_title,.play_wrapper_col3_item1_subtitle{
+            width: 100%;
+            max-width: 100%;
+        }
+        .play_wrapper_col3_item2{
+            max-width: 100% !important;
+            width: 100%;
+        }
+     }
 }
 
 @media (min-width: 992px) and (max-width: 1199.98px) {
+    .play_wrapper_col3 {
+        gap: 100px !important;
+        flex-wrap: wrap;
+     }
+     .play_wrapper_col3_item1{
+        width: 100%;
+        .play_wrapper_col3_item1_title,.play_wrapper_col3_item1_subtitle{
+            width: 100%;
+            max-width: 100%;
+        }
+        .play_wrapper_col3_item2{
+            max-width: 100% !important;
+            width: 100%;
+        }
+     }
 }
 
 @media (min-width: 1200px) and (max-width: 1399.98px) {
+    .play_wrapper_col3 {
+        gap: 100px !important;
+        flex-wrap: wrap;
+     }
+     .play_wrapper_col3_item1{
+        width: 100%;
+        .play_wrapper_col3_item1_title,.play_wrapper_col3_item1_subtitle{
+            width: 100%;
+            max-width: 100%;
+        }
+        .play_wrapper_col3_item2{
+            max-width: 100% !important;
+            width: 100%;
+        }
+     }
 }
 
 @media (min-width: 1400px) {
 }
 
-// Intro
+// Preloader
 
 @media (min-width: 320px) and (max-width: 575.98px) {
 }
@@ -822,6 +945,27 @@ body {
 }
 
 @media (min-width: 1400px) {
+    
+// .load_cat {
+//     top: 59%;
+//     left: 54%;
+//  }
+ 
+//  .load_1 {
+//     top: 55%;
+//     left: 52.2%;
+//     animation: preloader-rotate 10s linear infinite alternate;
+//  }
+//  .load_2 {
+//      top: 52.2%;
+//      left: 51%;
+//     animation: preloader-rotate_2 10s linear infinite alternate;
+//  }
+//  .load_3 {
+//     top: 50%;
+//     left: 50%;
+//     animation: preloader-rotate 10s linear infinite alternate;
+//  }
 }
 
 // Intro
