--- a/css/main.scss
+++ b/css/main.scss
@@ -908,7 +908,7 @@ h1 {
    animation: preloader-rotate 10s linear infinite alternate;
 }
 .loaded .preloader {
-   //    display: none;
+      display: none;
 }
 
 // ==================================
