--- a/css/main.scss
+++ b/css/main.scss
@@ -367,7 +367,7 @@ h1 {
    width: 100%;
    max-width: 295px;
    &:hover {
-      background: #b81f36;
+      background: #8a1829;
    }
 }
 .black_btn {
@@ -477,7 +477,7 @@ h1 {
 }
 
 .marquee {
-   animation: scroll 30s linear infinite;
+   animation: scroll 40s linear infinite;
 }
 
 @keyframes scroll {
@@ -595,6 +595,9 @@ h1 {
 }
 .img_absolute {
    position: absolute;
+   &:hover{
+    transform: scale(1.2);
+   }
 }
 .section_title {
    font-family: $font_700;
